disabled maddi-run-scanbuild